# NIMS

./: .gitignore  README.md  log.txt  pyproject.toml  report.docx  requirements.txt  test.py
configs/: api.yaml  batfish.yaml  config.yaml  correlation.yaml  dashboard.yaml  data.yaml  deep_learning.yaml  demo.yaml  error_analysis.yaml  explainability.yaml  features.yaml  hirschmann_logging.yaml  hirschmann_targets.local.yaml.example  live_logging.yaml  logging.yaml  network_action_executor.yaml  network_config.yaml  network_health.yaml  network_rules.yaml  optimization.yaml  paths.yaml  registry.yaml  remediation.yaml  sophos_logging.yaml  streaming.yaml  syslog_ingestion.yaml  training.yaml  visualization.yaml  webapp.yaml
docs/: NetSentinel_Project_Report.docx  engine_c_integration_handoff.md  engine_c_network_config.md  engine_c_safety_audit.md  live_integration_setup.md
scripts/: __init__.py  _bootstrap.py  analyze_network_config.py  build_experiment_index.py  build_model_registry.py  check_live_readiness.py  compare_network_snapshots.py  dry_run_network_actions.py  export_network_config_dashboard.py  generate_data_reports.py  generate_ingestion_report.py  generate_network_config_report.py  generate_statistics.py  generate_validation_report.py  ingest_switch_syslog.py  prepare_data.py  prepare_full_demo.py  prepare_network_health_dataset.py  promote_model.py  resolve_model.py  retrieve_huawei_config.py  run_api.py  run_audit.py  run_batfish_validation.py  run_correlation.py  run_dashboard.py  run_error_analysis.py  run_explainability.py  run_feature_engineering.py  run_hirschmann_config_logger.py  run_hirschmann_health_logger.py  run_live_logger.py  run_network_health_preprocessing.py  run_offline_ml_workflow.py  run_optimization.py  run_preprocessing.py  run_sophos_ingestor.py  run_streaming_demo.py  run_visualizations.py  train_model.py  (+4 more)
src/: __init__.py
(+318 files in other folders)
